- Improve the Look&Feel - Add the About dialog - Improve README.md